Update template for creating an issue for adding a new video.

--- a/.github/ISSUE_TEMPLATE/הוספת-סרטון-חדש.md
+++ b/.github/ISSUE_TEMPLATE/הוספת-סרטון-חדש.md
@@ -1,20 +1,25 @@
 ---
 name: הוספת סרטון חדש
 about: תבנית להוספת קישור לסרטון
-title: ''
+title: 'video'
 labels: ''
 assignees: ''
 ---
 
 ### תיאור הסרטון 
-תאר את הסרטון שאתה רוצה להוסיף בצורה ברורה ומפורטת.
+<!-- תאר את הסרטון שאתה רוצה להוסיף בצורה ברורה ומפורטת. -->
+
 
 ### קישור לסרטון
-צרף קישור לסרטון
+<!--צרף קישור לסרטון -->
+
 
 ### קטגורית הסרטון
+<!-- 
 מהי קטגורית הסרטון?
 אם יש צורך להוסיף קטגוריה שאינה קיימת - פרט כאן
+-->
  
+
 ### מידע נוסף
-כל מידע נוסף שיכול לעזור
+<!-- כל מידע נוסף שיכול לעזור -->
