Fix a bug in the template for creating a new Issue.

--- a/.github/ISSUE_TEMPLATE/הוספת-סרטון-חדש.md
+++ b/.github/ISSUE_TEMPLATE/הוספת-סרטון-חדש.md
@@ -1,8 +1,8 @@
 ---
 name: הוספת סרטון חדש
 about: תבנית להוספת קישור לסרטון
-title: 'video'
-labels: ''
+title: ''
+labels: 'video'
 assignees: ''
 ---
 
